# sms-telegram-bot

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  gammu-smsd.service  gammu-smsd.service.example  gammu-smsd.sysconfig.example  gammurc  gammurc.example  install.sh  pyproject.toml  setup.cfg
src/: sms.py
src/models/: __init__.py  configuration.py  smsbot.py
